fix: add missing background colors

--- a/src/css/utils/_color.scss
+++ b/src/css/utils/_color.scss
@@ -2,46 +2,31 @@
   background-color: var(--sn-stylekit-background-color);
 }
 
-.bg-info {
-  background-color: var(--sn-stylekit-info-color);
-}
-.bg-info-dark {
-  background-color: var(--sn-stylekit-info-color-darkened);
-}
-
-.bg-transparent {
-  background-color: transparent;
-}
-
 .bg-contrast {
   background-color: var(--sn-stylekit-contrast-background-color);
-}
-
-.bg-secondary-contrast {
-  background-color: var(--sn-stylekit-secondary-contrast-background-color);
 }
 
 .bg-border {
   background-color: var(--sn-stylekit-border-color);
 }
 
+.bg-secondary-contrast {
+  background-color: var(--sn-stylekit-secondary-contrast-background-color);
+}
+
 .bg-clip-padding {
   background-clip: padding-box;
 }
 
-.bg-neutral {
-  background-color: var(--sn-stylekit-neutral-color);
-}
-
-.bg-grey-5 {
-  background-color: var(--sn-stylekit-grey-5);
-}
-
-.bg-black {
-  background-color: var(--sn-stylekit-black);
+.bg-transparent {
+  background-color: transparent;
 }
 
 @mixin define-color($name, $source) {
+  .bg-#{$name} {
+    background-color: var(--sn-stylekit-#{$source});
+  }
+
   .color-#{$name} {
     color: var(--sn-stylekit-#{$source});
   }
@@ -53,6 +38,7 @@
 @include define-color("danger", "danger-color");
 @include define-color("info", "info-color");
 @include define-color("info-contrast", "info-contrast-color");
+@include define-color("info-dark", "info-color-darkened");
 
 @include define-color("grey-1", "grey-1");
 @include define-color("grey-2", "grey-2");
@@ -60,6 +46,7 @@
 @include define-color("grey-4", "grey-4");
 @include define-color("grey-5", "grey-5");
 @include define-color("grey-6", "grey-6");
+@include define-color("grey-super-light", "grey-super-light");
 
 @include define-color("black", "black");
 @include define-color("white", "white");
